--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>马永鑫宝贝~<br>我可以c你吗？</h1>
+        <h1>赵琦宝贝~<br>我可以c你吗？</h1>
         
         <div class="buttons-container">
             <button id="yes-btn">好呀！</button>
